fix spacing for beso hover

--- a/static/less/stolen.less
+++ b/static/less/stolen.less
@@ -171,7 +171,7 @@ h3 {
 .white-dots {
     background-image: url('/static/img/white_dot.png');
     background-repeat: repeat-x;
-    height: 1px;
+    height: 2px;
     width: 201px;
     margin-left: (@previewTextWidth - 201px) / 2;
 }
